data/derived/sp14/progs/unify/prog1337.ml.out
Characters 82-94:
  | Sine e -> sin(pi *. eval (e,0,0));;
                        ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
